Wed Feb 29 15:07:01 2012 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Allow installing PPD files into a custom directory (SF: #3446190,
	  thanks to Jiri Popelka from Red Hat for the patch).

	* Do not strip the compiled executable when installing via "make
	  install" to preserve the symbols when the compilation was done
	  in debug mode (SF: #3444332, thanks to Jiri Popelka from Red Hat for
	  the patch).

	* Removed executable bit from the files include/algo0x0d.h,
	  include/algo0x0e.h, src/algo0x0e.cpp, ppd/po/pt.po (SF: #3444284,
	  thanks to Jiri Popelka from Red Hat).

	* Corrected address of the FSF (SF: #3444266, thanks to Jiri Popelka
	  from Red Hat for the patch).

Wed Dec 06 22:46:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Added new printer:
		- Samsung SCX-3200 (Ubuntu bug #898385)

	* Updated translation files po/fr.po and po/pt.po for changed page
	  size names in CUPS 1.5.x.

	* Rebuilt all PPDs with ppdc of CUPS 1.5.0.

Wed Jul 21 17:11:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Added new printer:
		- Xerox Phaser 3155 (SF Open Discussion forum)

	* Updated translation files po/fr.po and po/pt.po.

Wed Jul 20 17:44:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Added new printers:
		- Samsung CLP-310 (SF: #3196609)
		- Samsung CLP-315 (SF: #3196609)
		- Xerox Phaser 3140 (SF Open Discussion forum)

	* Updated translation files po/fr.po and po/pt.po.

Mon Jun 27 12:52:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Make SpliX query DefaultInputSlot from the PPD for the input slot
	  name, when InputSlot is NULL (SF: #3319051).

	* Moved the cms profiles from cups/model/MFR/cms to cups/profiles/MFR
	  to stop making cups-driverd issuing error messages (SF: #3319110)

	* Add missing delete[] in two error paths (SF patch #3302528).

	* Fixed double free in pstoqpdl filter, which happens when the